--- a/index.html
+++ b/index.html
@@ -32,5 +32,93 @@
             </div>
         </div>
         <script src="math-game.js"></script>
+        <style>
+            
+            @media (min-width:700px) and (max-width:1000px)
+            {
+                #game-box{
+                    font-size: 120px;
+                }
+                .choices{
+                    width: 60px;
+                    height: 60px;
+                    font-size: 40px;
+                    margin-left: 5px;
+                }
+                #score{
+                    height: 20px;
+                    width: 60px;
+                    font-size: 15px;
+                }
+                #start-reset{
+                    height: 30px;
+                    width: 13%;
+                    font-size: 14px;
+                }
+                #time-counter{
+                    height: 16px;
+                    width: 19%; 
+                    font-size: 12px;
+                    margin-top: -80px;
+                }
+                #correct{
+                    margin-left: 40%;
+                    width: 7%;
+                    font-size: 13px;
+                }
+                #wrong{
+                    margin-left: 40%;
+                    width: 7%;
+                    font-size: 13px; 
+                }
+                #game-over{
+                font-size: 50px;
+                }
+            }
+            @media (min-width:0px) and (max-width:701px)
+            {
+                #game-box{
+                    font-size: 50px;
+                }
+                .choices{
+                    width: 40px;
+                    height: 40px;
+                    font-size: 20px;
+                    margin-left: 10px;
+                }
+                #score{
+                    height: 15px;
+                    width: 50px;
+                    font-size: 12px;
+                }
+                #start-reset{
+                    height: 30px;
+                    width: 13%;
+                    font-size: 10px;
+                }
+                #time-counter{
+                    height: 14px;
+                    width: 16%; 
+                    font-size: 5px;
+                    margin-top: -80px;
+                }
+                #correct{
+                    margin-left: 30%;
+                    width: 6%;
+                    font-size: 5px;
+                }
+                #wrong{
+                    margin-left: 30%;
+                    width: 6%;
+                    font-size: 5px; 
+                }
+                #instructions{
+                font-size: 14px;
+                }
+                #game-over{
+                font-size: 30px;
+                }
+            }
+        </style>
     </body>
 </html>
